# chappie

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PyPI-Recovery-Codes-yanreddddd-2026-04-09T16_55_49.430138.txt  README.md  docker-compose.yml  install.bat  pyproject.toml  run-demo.bat  run-tests.bat  view-report.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
budgetctl/: __init__.py  alerts.py  api.py  config.py  exceptions.py  logger.py  models.py
budgetctl/engine/: __init__.py  budget_enforcer.py  circuit_breaker.py  loop_detector.py
budgetctl/store/: __init__.py  memory.py  redis.py
chappie/: __init__.py  alerts.py  api.py  config.py  exceptions.py  logger.py  models.py
chappie/engine/: __init__.py  budget_enforcer.py  circuit_breaker.py  loop_detector.py
chappie/store/: __init__.py  memory.py  redis.py
cli/: main.py
docs/: github-issues.md  launch-content.md  test-report-day1.json  test-report-day1.md  test-report-day2.json  test-report-day2.md  test-report-day6.json  test-report-day6.md  test-report.html
examples/: loop_demo.py  quick_test.py
tests/: conftest.py  report.py  test_budget_enforcer.py  test_circuit_breaker.py  test_loop_detector.py  test_store.py
