[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chappie"
version = "0.1.0"
description = "The circuit breaker for AI agent spend"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Johnred Demafeliz"}]
keywords = ["ai", "llm", "cost-management", "circuit-breaker", "litellm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "litellm>=1.40.0",
    "redis[hiredis]>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.21",
    "ruff>=0.3.0",
]

[project.scripts]
budgetctl = "cli.main:cli"

[project.urls]
Homepage = "https://github.com/GITHUB_USERNAME/chappie"
Issues = "https://github.com/GITHUB_USERNAME/chappie/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
